# llm-fine-tuning-pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  train.yml
configs/: llama3_8b_qlora.yaml  mistral_7b_qlora.yaml
data/sample/: sample_alpaca.json  sample_chat.json
docker/: Dockerfile  Dockerfile.inference  Dockerfile.train
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HANDOFF.md  RESULTS.md  TRAINING_GUIDE.md
scripts/: deploy.py  evaluate.py  inference.py  prepare_data.py  train.py
src/config/: settings.py  training_config.py
src/data/: __init__.py  dataset.py  splitter.py  templates.py  validator.py
src/deployment/: __init__.py  infrastructure.py  model_registry.py  sagemaker.py
src/evaluation/: __init__.py  benchmark.py  evaluator.py  human_eval.py
src/inference/: __init__.py  api.py  model_loader.py  predictor.py
src/training/: __init__.py  callbacks.py  quantization.py  trainer.py
src/utils/: logger.py  wandb_utils.py
tests/integration/: test_inference.py
tests/unit/: test_callbacks.py  test_dataset.py  test_evaluator.py  test_infrastructure.py  test_model_registry.py  test_predictor.py  test_quantization.py  test_sagemaker.py  test_settings.py  test_templates.py  test_trainer.py  test_training_config.py  test_validator.py
